// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`plugin-entry > should apply different environments entry config correctly 1`] = `
[
  {
    "entry": {
      "index": [
        "./src/index.client",
      ],
    },
    "plugins": [
      {
        "name": "RsbuildCorePlugin",
      },
    ],
  },
  {
    "entry": {
      "main": [
        "./src/index.ssr",
      ],
    },
    "plugins": [
      {
        "name": "RsbuildCorePlugin",
      },
    ],
  },
]
`;

exports[`plugin-entry > should apply environments entry config correctly 1`] = `
[
  {
    "entry": {
      "index": [
        "./src/index.client",
      ],
    },
    "plugins": [
      {
        "name": "RsbuildCorePlugin",
      },
    ],
  },
  {
    "entry": {
      "index": [
        "./src/index.ssr",
      ],
    },
    "plugins": [
      {
        "name": "RsbuildCorePlugin",
      },
    ],
  },
]
`;
